--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -38,7 +38,7 @@
         color: #fff;
         &:hover {
             background: transparent;
-            border-color: $primary-color;
+            border-color: #56e39f;
             color: #000;
         }
     }
