--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ button:focus {
           border-radius: 0px;
           box-shadow: none;
           margin: 0px;
-          background: #ffd200; }
+          background: #59c9a5; }
           @media (min-width: 992px) {
             .header_area .navbar .nav .nav-item.submenu ul {
               position: absolute;
@@ -272,7 +272,7 @@ button:focus {
             .header_area .navbar .nav .nav-item.submenu ul .nav-item:last-child {
               border-bottom: none; }
             .header_area .navbar .nav .nav-item.submenu ul .nav-item:hover .nav-link {
-              background: #e45447;
+              background: #56e39f;
               color: #fff; }
         @media (min-width: 992px) {
           .header_area .navbar .nav .nav-item.submenu:hover ul {
@@ -345,12 +345,14 @@ button:focus {
       background: #fff;
       margin: 0 15px; } }
   .banner-content .primary-btn {
-    background: #e45447;
+    /*background: #e45447;*/
+    background: #07110b;
     border: 2px solid transparent;
-    color: #fff; }
+    color: #56e39f; }
     .banner-content .primary-btn:hover {
       background: transparent;
-      border-color: #e45447;
+      /*border-color: #e45447;*/
+      border-color: #59c9a5;
       color: #000; }
   .banner-content h1 {
     color: #000;
@@ -625,13 +627,13 @@ button:focus {
   .causes_slider .owl-dots .owl-dot {
     height: 14px;
     width: 14px;
-    background: #eeeeee;
+    background: #07110b;
     display: inline-block;
     margin-right: 7px; }
     .causes_slider .owl-dots .owl-dot:last-child {
       margin-right: 0px; }
     .causes_slider .owl-dots .owl-dot.active {
-      background: #e45447; }
+      background: #56e39f; }
 
 .causes_item {
   background: #fff; }
@@ -2632,7 +2634,7 @@ h6 {
       .testimonial_area .testimonial_logos {
         display: none; } }
   .testimonial_area .active_testimonial .owl-dots {
-    background: #e45447;
+    background: #56e39f;
     height: 25px;
     width: 100px;
     position: absolute;
@@ -2650,7 +2652,7 @@ h6 {
     .testimonial_area .active_testimonial .owl-dots .owl-dot {
       height: 15px;
       width: 15px;
-      background: #ec887f;
+      background: #07110b;
       margin: 5px;
       border-radius: 50%;
       margin-top: 5px;
@@ -2674,7 +2676,7 @@ h6 {
         margin: 0 auto 30px; } }
   .single_testimonial .testimonial_head h4 {
     margin-bottom: 10px;
-    color: #000;
+    color: #56e39f;
     font-size: 21px; }
   .single_testimonial .testimonial_head .review i.fa {
     color: #ffc000; }
@@ -2770,7 +2772,7 @@ h6 {
     margin-bottom: 23px; }
 
   .header_area .navbar {
-    background: #e45447; }
+    background: #56e39f; }
 
   .navbar-toggler[aria-expanded="false"] span:nth-child(2) {
     opacity: 1; }
@@ -2854,7 +2856,7 @@ h6 {
 /* Footer Area css
 ============================================================================================ */
 .footer_area {
-  background: #ffd200; }
+  background: #56e39f; }
 
 .social_widget .f_title h4 {
   font-size: 21px;
@@ -2870,7 +2872,7 @@ h6 {
   margin-right: 40px;
   display: inline-block; }
   .social_widget .list li a {
-    color: #c48e0b;
+    color: #07110b;
     font-size: 36px;
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
