--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@ body {
   body p{
     color: #dce8e4;
   }
+  body label {
+    color: #dce8e4;
+  }
   body.elements {
     font-weight: 400; }
 
@@ -112,7 +115,7 @@ button:focus {
     font-family: "Poppins", sans-serif;
     font-size: 48px;
     /*color: #222222;*/
-    color: #59c9a5;
+    color: #56e39f;
     font-weight: 700;
     margin-bottom: 20px;
     padding-bottom: 15px;
@@ -1274,6 +1277,16 @@ button:focus {
   height: 420px;
   margin-top: 80px; }
 
+.contact_area {
+    background-image: url(../img/newsletter-bg.jpg);
+  /*opacity: 50%; */
+  background-size: cover;
+  /*background-blend-mode: darken;*/
+  background-position: fixed;
+  }
+.contact_area .main-title {
+  color: #dce8e4;
+}
 .contact_info .info_item {
   position: relative;
   padding-left: 45px; }
@@ -1283,7 +1296,7 @@ button:focus {
     top: 0;
     font-size: 20px;
     line-height: 24px;
-    color: #e45447;
+    color: #dce8e4;
     font-weight: 600; }
   .contact_info .info_item h6 {
     font-size: 16px;
@@ -1291,9 +1304,9 @@ button:focus {
     color: "Roboto", sans-serif;
     font-weight: bold;
     margin-bottom: 0px;
-    color: #222222; }
+    color: #56e39f; }
     .contact_info .info_item h6 a {
-      color: #222222; }
+      color: #56e39f; }
   .contact_info .info_item p {
     font-size: 14px;
     line-height: 24px;
@@ -1304,34 +1317,40 @@ button:focus {
   .contact_form .form-group .form-control {
     font-size: 13px;
     line-height: 26px;
-    color: #999;
-    border: 1px solid #eeeeee;
+    background-color: #07110b;
+    color: #56e39f;
+    /*border: 5px solid #eeeeee;*/
+    /*border-collapse: collapse;*/
     font-family: "Roboto", sans-serif;
-    border-radius: 0px;
+    /*border-radius: 0px;*/
+    border: none;
     padding-left: 20px; }
     .contact_form .form-group .form-control:focus {
-      box-shadow: none;
-      outline: none; }
+      /*box-shadow: none;*/
+      /*outline: none;*/
+      /*background-color: #56e39f;*/
+      box-shadow: 0 0 10px #56e39f;
+      /*border-color: 1px solid #56e39f;*/ }
     .contact_form .form-group .form-control.placeholder {
-      color: #999; }
+      color: #56e39f; }
     .contact_form .form-group .form-control:-moz-placeholder {
-      color: #999; }
+      color: #56e39f; }
     .contact_form .form-group .form-control::-moz-placeholder {
-      color: #999; }
+      color: #56e39f; }
     .contact_form .form-group .form-control::-webkit-input-placeholder {
-      color: #999; }
+      color: #56e39f; }
   .contact_form .form-group textarea {
     resize: none; }
     .contact_form .form-group textarea.form-control {
       height: 134px; }
 .contact_form .primary-btn {
-  background: #e45447;
-  color: #fff;
+  background: #07110b;
+  color: #56e39f;
   margin-top: 20px;
-  border: 2px solid #e45447; }
+  border: 2px solid #07110b; }
   .contact_form .primary-btn:hover {
     color: #000;
-    border: 2px solid #90acd1;
+    border: 2px solid #07110b;
     background: transparent; }
 
 /* Contact Success and error Area css
@@ -1349,23 +1368,27 @@ button:focus {
     display: block;
     border-bottom: none;
     padding-top: 50px;
-    padding-bottom: 50px; }
+    padding-bottom: 50px;
+    background-color: #56e39f;
+    color: #07110b;
+     }
     .modal-message .modal-dialog .modal-content .modal-header .close {
       position: absolute;
       right: -15px;
       top: -15px;
       padding: 0px;
-      color: #fff;
+      color: #56e39f;
       opacity: 1;
       cursor: pointer; }
     .modal-message .modal-dialog .modal-content .modal-header h2 {
       display: block;
       text-align: center;
-      color: #e45447;
+      color: #07110b;
       padding-bottom: 10px;
       font-family: "Roboto", sans-serif; }
     .modal-message .modal-dialog .modal-content .modal-header p {
-      display: block; }
+      display: block; 
+    color: #07110b;}
 
 /* End Contact Success and error Area css
 ============================================================================================ */
@@ -2699,13 +2722,24 @@ h6 {
 ============================================================================================ */
 .newsletter-area {
   background-image: url(../img/newsletter-bg.jpg);
-  background-size: cover; }
+  /*opacity: 50%; */
+  background-size: cover; 
+
+}
+  .newsletter-area .filter {
+    background-color: #000;
+    opacity: 50%;
+    z-index: -1;
+  }
+  .newsletter-area .main-title{
+    margin-bottom: 50px;
+  }
   .newsletter-area .main-title h1 {
-    color: #fff; }
+    color: #dce8e4; }
     .newsletter-area .main-title h1:before {
-      background: #fff; }
+      background: #dce8e4; }
     .newsletter-area .main-title h1:after {
-      background: #fff; }
+      background: #dce8e4; }
   .newsletter-area .main-title p {
     color: #fff; }
 
